Change white piece icons to display correctly on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ html, body {
     background-color: slategrey;
     font-family: Arial, Helvetica, sans-serif;
 }
+* {
+    margin: 0px;
+    padding: 0px;
+}
 h1 {
     font-family: "Rock Salt";
 }
@@ -62,10 +66,14 @@ form button:hover {
 
 /* FEN DISPLAY */
 .fen-title {
+    width: 100%;
     font-weight: bold;
+    text-align: center;
+    padding: 0.8em 0px;
 }
 #fen {
     font-weight: normal;
+    word-wrap: break-word;
 }
 
 
@@ -160,4 +168,17 @@ form button:hover {
 #game-state {
     text-transform: capitalize;
     visibility: hidden;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+    .board-square {
+        width: 38px;
+        height: 38px;
+    }   
+    
+    .board-piece {
+        font-size: 30px;
+    }
 }
